add academic data

--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -28,7 +28,7 @@
   <body>
     <div class="wrapper">
       <header>
-        
+
         {% if site.avatar %}
         <a class="image avatar"><img src="{{ site.avatar }}" alt="avatar" /></a>
         {% endif %}
@@ -53,7 +53,13 @@
         {% if site.google_scholar %}
         <a style="margin: 0 5px 0 0" href="{{ site.google_scholar }}">
           <i class="ai ai-google-scholar" style="font-size:1.2rem"></i>
-        </a>  
+        </a>
+        {% endif %}
+
+        {% if site.semantic_scholar %}
+        <a style="margin: 0 5px 0 0" href="{{ site.semantic_scholar }}">
+          <i class="ai ai-semantic-scholar" style="font-size:1.3rem"></i>
+        </a>
         {% endif %}
 
         {% if site.cv_link %}
@@ -95,7 +101,7 @@
 
       </section>
       <footer>
-        
+
       </footer>
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
