--- a/_sass/minimal-light.scss
+++ b/_sass/minimal-light.scss
@@ -4,10 +4,11 @@
 body {
   background-color: #fff;
   padding:0px;
-  font: 16.0px/1.5 Crimson Pro, serif;
+  font: 16.0px/1.5 "Avenir Next", "Gill Sans", "Gill Sans MT", Helvetica, sans-serif;
   color:#595959;
   font-weight:400;
-  margin:0
+  margin:0;
+  font-size: 15px;
 }
 
 .pub-row {
