add google scholar link

--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -56,11 +56,11 @@
         </a>
         {% endif %}
 
-        {% if site.semantic_scholar %}
+        <!-- {% if site.semantic_scholar %}
         <a style="margin: 0 5px 0 0" href="{{ site.semantic_scholar }}">
           <i class="ai ai-semantic-scholar" style="font-size:1.3rem"></i>
         </a>
-        {% endif %}
+        {% endif %} -->
 
         {% if site.cv_link %}
         <a style="margin: 0 5px 0 0" href="{{ site.cv_link }}">
