--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -40,53 +40,73 @@
         <br>
         {% endif %}
         {% if site.affiliation %}
-        <a href="{{ site.affiliation_link }}" rel="noopener"><autocolor>{{ site.affiliation }}</autocolor></a>
-        <br>
+        <p style="font-size: larger; margin-bottom: 4px;">{{ site.affiliation }}</p>
+        <p>Paul G. Allen School of Computer Science and Engineering</p>
         {% endif %}
-        {% if site.email %}
+        <!-- {% if site.email %}
         <email>{{ site.email }}</email>
-        {% endif %}
-
-        <br>
-        <br>
-        <div class="social-icons">
-        {% if site.google_scholar %}
-        <a style="margin: 0 5px 0 0" href="{{ site.google_scholar }}">
-          <i class="ai ai-google-scholar" style="font-size:1.2rem"></i>
-        </a>
-        {% endif %}
-
-        <!-- {% if site.semantic_scholar %}
-        <a style="margin: 0 5px 0 0" href="{{ site.semantic_scholar }}">
-          <i class="ai ai-semantic-scholar" style="font-size:1.3rem"></i>
-        </a>
         {% endif %} -->
 
-        {% if site.cv_link %}
-        <a style="margin: 0 5px 0 0" href="{{ site.cv_link }}">
-          <i class="ai ai-cv" style="font-size:1.3rem;"></i>
-        </a>
-        {% endif %}
-
-        {% if site.github_link %}
-        <a style="margin: 0 5px 0 0" href="{{ site.github_link }}">
-          <i class="fab fa-github"></i>
-        </a>
-        {% endif %}
-
-        {% if site.linkedin %}
-        <a style="margin: 0 5px 0 0" href="{{ site.linkedin }}">
-          <i class="fab fa-linkedin"></i>
-        </a>
-        {% endif %}
-
-        {% if site.twitter %}
-        <a style="margin: 0 0 0 0" href="{{ site.twitter }}">
-          <i class="fab fa-twitter"></i>
-        </a>
-        {% endif %}
-        </div>
+        <!-- <br>
         <br>
+        <div class="social-icons">
+          {% if site.google_scholar %}
+          <a style="margin: 0 5px 0 0" href="{{ site.google_scholar }}">
+            <i class="ai ai-google-scholar" style="font-size:1.2rem"></i>
+          </a>
+          {% endif %}
+
+          {% if site.semantic_scholar %}
+          <a style="margin: 0 5px 0 0" href="{{ site.semantic_scholar }}">
+            <i class="ai ai-semantic-scholar" style="font-size:1.3rem"></i>
+          </a>
+          {% endif %}
+
+          {% if site.cv_link %}
+          <a style="margin: 0 5px 0 0" href="{{ site.cv_link }}">
+            <i class="ai ai-cv" style="font-size:1.3rem;"></i>
+          </a>
+          {% endif %}
+
+          {% if site.github_link %}
+          <a style="margin: 0 5px 0 0" href="{{ site.github_link }}">
+            <i class="fab fa-github"></i>
+          </a>
+          {% endif %}
+
+          {% if site.linkedin %}
+          <a style="margin: 0 5px 0 0" href="{{ site.linkedin }}">
+            <i class="fab fa-linkedin"></i>
+          </a>
+          {% endif %}
+
+          {% if site.twitter %}
+          <a style="margin: 0 0 0 0" href="{{ site.twitter }}">
+            <i class="fab fa-twitter"></i>
+          </a>
+          {% endif %}
+        </div> -->
+
+        <div style="display: flex; flex-direction: column; gap: 8px;">
+          <a style="margin: 0 5px 0 0" href="{{ site.cv_link }}" target="_blank">
+            <span>Curriculum Vitae</span>
+          </a>
+          <a style="margin: 0 5px 0 0" href="{{ site.resume_link }}" target="_blank">
+            <span>Resume (1 page)</span>
+          </a>
+          <a style="margin: 0 5px 0 0" href="{{ site.google_scholar }}">
+            <span>Google Scholar</span>
+          </a>
+          <a style="margin: 0 5px 0 0" href="{{ site.linkedin }}">
+            <span>LinkedIn</span>
+          </a>
+          <div>
+            Email: <a href="{{ site.email }}" target="_blank">rayfok@cs.washington.edu</a>
+          </div>
+          <div>
+            Twitter: <a href="{{ site.twitter }}" target="_blank">@rayrayfok</a>
+          </div>
+        </div>
 
       </header>
       <section>
