--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -1,53 +1,58 @@
 <!DOCTYPE html>
-<html lang="{{ site.lang | default: "en-US" }}">
-  <head>
-    <title>{{ site.title }} | {{site.affiliation}}</title>
+<html lang="{{ site.lang | default: " en-US" }}">
 
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="{{ site.description }}">
-    {% if site.keywords %}
-    <meta name="keywords" content="{{ site.keywords }}">
-    {% endif %}
-    {% if site.canonical %}
-    <link rel="canonical" href="{{ site.canonical }}"/>
-    {% endif %}
+<head>
+  <title>{{ site.title }} | {{site.affiliation}}</title>
 
-    <link rel="icon" media="(prefers-color-scheme:dark)" href="{{ site.favicon_dark }}" type="image/png" />
-    <link rel="icon" media="(prefers-color-scheme:light)" href="{{ site.favicon }}" type="image/png" />
-    <script src="./assets/js/favicon-switcher.js" type="application/javascript"></script>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="{{ site.description }}">
+  {% if site.keywords %}
+  <meta name="keywords" content="{{ site.keywords }}">
+  {% endif %}
+  {% if site.canonical %}
+  <link rel="canonical" href="{{ site.canonical }}" />
+  {% endif %}
 
-    <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/academicons/1.8.6/css/academicons.min.css integrity="sha256-uFVgMKfistnJAfoCUQigIl+JfUaP47GrRKjf6CTPVmw=" crossorigin=anonymous>
-    <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ=" crossorigin=anonymous>
+  <link rel="icon" media="(prefers-color-scheme:dark)" href="{{ site.favicon_dark }}" type="image/png" />
+  <link rel="icon" media="(prefers-color-scheme:light)" href="{{ site.favicon }}" type="image/png" />
+  <script src="./assets/js/favicon-switcher.js" type="application/javascript"></script>
 
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="stylesheet" href="./assets/css/publications.css">
+  <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/academicons/1.8.6/css/academicons.min.css
+    integrity="sha256-uFVgMKfistnJAfoCUQigIl+JfUaP47GrRKjf6CTPVmw=" crossorigin=anonymous>
+  <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css
+    integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ=" crossorigin=anonymous>
 
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
+  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/publications.css">
 
-        {% if site.avatar %}
-        <a class="image avatar"><img src="{{ site.avatar }}" alt="avatar" /></a>
-        {% endif %}
+</head>
 
-        <h1>{{ site.title }}</h1>
+<body>
+  <div class="wrapper">
+    <header>
 
-        {% if site.position %}
-        <position style="font-size:1.10rem;">{{ site.position }}</position>
-        <br>
-        {% endif %}
-        {% if site.affiliation %}
-        <p style="font-size: larger; margin-bottom: 4px;">{{ site.affiliation }}</p>
-        <p>Paul G. Allen School of Computer Science and Engineering</p>
-        {% endif %}
-        <!-- {% if site.email %}
-        <email>{{ site.email }}</email>
-        {% endif %} -->
+      {% if site.avatar %}
+      <a class="image avatar"><img src="{{ site.avatar }}" alt="avatar" /></a>
+      {% endif %}
 
-        <!-- <br>
+      <h1>{{ site.title }}</h1>
+
+      <!-- {% if site.position %}
+      <position style="font-size:1.10rem;">{{ site.position }}</position>
+      <br>
+      {% endif %}
+      {% if site.affiliation %}
+      <p style="font-size: larger; margin-bottom: 4px;">{{ site.affiliation }}</p>
+      {% endif %} -->
+      {% if site.email %}
+      <email>{{ site.email }}</email>
+      {% endif %}
+
+      <div style="margin-bottom: 16px;"></div>
+
+      <!-- <br>
         <br>
         <div class="social-icons">
           {% if site.google_scholar %}
@@ -87,53 +92,54 @@
           {% endif %}
         </div> -->
 
-        <div style="display: flex; flex-direction: column; gap: 8px;">
-          <a style="margin: 0 5px 0 0" href="{{ site.cv_link }}" target="_blank">
-            <span>Curriculum Vitae</span>
-          </a>
-          <a style="margin: 0 5px 0 0" href="{{ site.resume_link }}" target="_blank">
-            <span>Resume (1 page)</span>
-          </a>
-          <a style="margin: 0 5px 0 0" href="{{ site.google_scholar }}">
-            <span>Google Scholar</span>
-          </a>
-          <a style="margin: 0 5px 0 0" href="{{ site.linkedin }}">
-            <span>LinkedIn</span>
-          </a>
-          <div>
-            Email: <a href="{{ site.email }}" target="_blank">rayfok@cs.washington.edu</a>
-          </div>
-          <div>
-            Twitter: <a href="{{ site.twitter }}" target="_blank">@rayrayfok</a>
-          </div>
-        </div>
+      <div style="display: flex; flex-direction: column; gap: 8px;">
+        <a style="margin: 0 5px 0 0" href="{{ site.cv_link }}" target="_blank">
+          <span>Curriculum Vitae</span>
+        </a>
+        <a style="margin: 0 5px 0 0" href="{{ site.resume_link }}" target="_blank">
+          <span>Resume (1 page)</span>
+        </a>
+        <a style="margin: 0 5px 0 0" href="{{ site.google_scholar }}">
+          <span>Google Scholar</span>
+        </a>
+        <a style="margin: 0 5px 0 0" href="{{ site.linkedin }}">
+          <span>LinkedIn</span>
+        </a>
+        <!-- <div>
+          Twitter: <a href="{{ site.twitter }}" target="_blank">@rayrayfok</a>
+        </div> -->
+      </div>
 
-      </header>
-      <section>
+    </header>
+    <section>
 
       {{ content }}
 
       <br>
 
       {% if site.enable_footnote %}
-      <p><small>Powered by Jekyll and <a href="https://github.com/yaoyao-liu/minimal-light" target="_blank" rel="noopener">Minimal Light</a> theme.</small></p>
+      <p><small>Powered by Jekyll and <a href="https://github.com/yaoyao-liu/minimal-light" target="_blank"
+            rel="noopener">Minimal Light</a> theme.</small></p>
       {% endif %}
 
-      </section>
-      <footer>
+    </section>
+    <footer>
 
-      </footer>
-    </div>
-    <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
-    {% if site.google_analytics %}
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-      ga('create', '{{ site.google_analytics }}', 'auto');
-      ga('send', 'pageview');
-    </script>
-    {% endif %}
-  </body>
+    </footer>
+  </div>
+  <script src="{{ " /assets/js/scale.fix.js" | relative_url }}"></script>
+  {% if site.google_analytics %}
+  <script>
+    (function (i, s, o, g, r, a, m) {
+      i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+        (i[r].q = i[r].q || []).push(arguments)
+      }, i[r].l = 1 * new Date(); a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+    ga('create', '{{ site.google_analytics }}', 'auto');
+    ga('send', 'pageview');
+  </script>
+  {% endif %}
+</body>
+
 </html>
